# ABSCO

./: .gitignore  .gitmodules  ABSCO_compute.py  ABSCO_config.ini  ABSCO_preprocess.py  ABSCO_tables.py  AGENTS.md  FSCDXS_line_params.csv  LICENSE.md  README.md  build_models.py  environment.yml  join_multiple.sh  join_tables.py  pixi.toml  pyproject.toml  read_ABSCO_tables.py  requirements.txt  run_LBLRTM_ABSCO.py  run_multiple_configs.sh  split_config.py
PT_grid/: AIRS_P_air.txt  Tbar_Grid.txt
VMR/: .gitignore  LBLATM_Standard_Profiles.csv  USS_AIRS_broadener.csv  USS_AIRS_profile.csv  standard_atm_HDO_profile.py  standard_atm_profiles.py
densities/: .gitignore  LBLATM_Standard_Profiles.csv  XS_LBLATM_Standard_Profiles.csv  standard_atm_densities.py  standard_atm_profiles.py
docs/: packaging_plan.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
notebooks/: create_absco_config-tropomi.ipynb
scripts/: .gitignore  join_multiple.sh  run_multiple_configs.sh  standard_atm_HDO_profile.py  standard_atm_profiles.py
src/absco/: __init__.py  artifacts.py  build_models.py  compute.py  config_assistant.py  logutil.py  paths.py  preprocess.py
src/absco/_common/: FortranFile.py  RC_utils.py  __init__.py  lblTools.py  utils.py
src/absco/cli/: __init__.py  build.py  config.py  generate.py  info.py  init.py  read_tables.py  split_config.py
src/absco/data/: ABSCO_config.template.ini  FSCDXS_line_params.csv  __init__.py
src/absco/data/PT_grid/: build_temp_array.txt  dump_air_pres
src/absco/data/VMR/: HDO_example_profile.csv  USS_AIRS_profile.csv
tests/: conftest.py  test_config_assistant.py  test_logutil.py  test_pipeline_e2e.py  test_preprocess_paths.py
